--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="index.html" class="active">Accueil</a></li>
-            <li><a href="page/Apropos.html">A Propos</a></li>
+            <li><a href="Apropos.html">A Propos</a></li>
 
             <li class="dropdown">
               <a href="#">
